[package]
name = "stringr"
version = "0.1.2"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2018"
repository = "https://github.com/mztikk/stringr"
license = "MIT"
description = "random string functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = {version = "0.4.0"}
